src/objects/IQVIA_Agreement__c.object
<CustomObject>
    <description>CLM-MC-CLMCMA-17657 - Represents an agreement in the system</description>
    <fields>
        <fullName>AMA_Terms_Included_US_Only__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if AMA Terms included or not.</description>
        <label>AMA Terms Included? (US Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>CLM-MC-CLMCMA-17693 - This field is used to store Account Country</description>
        <label>Account Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>      
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - The link to the account record to identify the external party to this agreement</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IQVIA Agreements</relationshipLabel>
        <relationshipName>Acc_IQVIAAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_By__c</fullName>          
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - The user who activated the agreement in the system</description>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - The date the agreement was activated in the system</description>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Agreement_Value__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Currency field to store actual agreement value for PSA and MSA Agreements.</description>
        <label>Actual Agreement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendums__c</fullName>
        <description>CLM-MC-CLMCMA-18282 - This field is used to store template addendums.</description>
        <label>Addendums</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Software-as-a-Service Addendum</fullName>
                </value>
                <value>
                    <fullName>Emerging Biopharmaceutical Company Addendum</fullName>
                </value>
                <value>
                    <fullName>Contract Sales &amp; Medical Solutions Services Addendum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>    
    <fields>
        <fullName>Affiliate_Use_Language_Exists__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if Affiliate Use Language Exists or not.</description>
        <label>Affiliate Use Language Exists?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Cloned_From__c</fullName>        
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-CLMCMA-17657 - Agreement Cloned From to keep track of the &quot;parent&quot; agreement</description>
        <inlineHelpText>Auto-populated, read-only. The previous agreement in the agreement amendment sequence. E.g., CO3 -&gt; CO2, CO1 -&gt; GSA, Amendment 1 to MSA -&gt; MSA etc.</inlineHelpText>
        <label>Previous Agreement</label>
        <referenceTo>IQVIA_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (Previous Agreement)</relationshipLabel>
        <relationshipName>Previous_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Agreement Number_Num (INTERNAL)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Repository_Number__c</fullName>
        <description>CLM-MC-CLMCMA-21460 - This field is used to store Agreement Repository Number</description>
        <label>Agreement Repository Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>CLM-MC-CLMCMA-18538 - This picklist field stores agreement type.</description>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Amendment Continuation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>    
    <fields>
        <fullName>Annual_Price_Increase__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store Annual Price Increase Percentage.</description>            
        <label>Annual Price Increase %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>CLM-MC-CLMCMA-19731 - This Date field is used to store the date on which Agreement is Assigned or Reassigned to CA team</description>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This field is used to store business line.</description>            
        <label>Business Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>       
            <valueSetDefinition>
                <value>
                    <fullName>InfoSol-IM</fullName>
                </value>
                <value>
                    <fullName>InfoSol-Data Products</fullName>
                </value>
                <value>
                    <fullName>CommSol-Brand&amp;Marketing</fullName>
                </value>
                <value>
                    <fullName>CommSol-OmniChannel</fullName>
                </value>
                <value>
                    <fullName>CommSol-MarketAccess</fullName>
                </value>
                <value>
                    <fullName>RWSol-Tech&amp;Data</fullName>
                </value>
                <value>
                    <fullName>CommSol-Compliance&amp;Quality</fullName>
                </value>
                <value>
                    <fullName>RWSol-MedSci</fullName>
                </value>
                <value>
                    <fullName>HCSol-Profes Services</fullName>
                </value>
                <value>
                    <fullName>CommSol-FieldForceOperations</fullName>
                </value>
                <value>
                    <fullName>RWSol-Strategy&amp;Innovation</fullName>
                </value>
                <value>
                    <fullName>RWSol-PCS</fullName>
                </value>
                <value>
                    <fullName>RWSol-Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>CommSol-EBP</fullName>
                </value>
                <value>
                    <fullName>SPDI Supplier Contracts</fullName>
                </value>
                <value>
                    <fullName>HCSol-Data</fullName>
                </value>
                <value>
                    <fullName>InfoSol-EBP</fullName>
                </value>
                <value>
                    <fullName>InfoSol-FINCOM</fullName>
                </value>
                <value>
                    <fullName>InfoSol-Global</fullName>
                </value>
                <value>
                    <fullName>InfoSol-PharMetrics Plus/AEMR</fullName>
                </value>
                <value>
                    <fullName>SPDI Client Contracts</fullName>
                </value>
                <value>
                    <fullName>RWSol-EBP</fullName>
                </value>
                <value>
                    <fullName>CommSol-Client Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Support Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPRA_Compliance_Status__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - Picklist Field to track the status of letters and remediation.</description>
        <label>CPRA Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Included in MSA</fullName>
                </value>
                <value>
                    <fullName>Included in GSA</fullName>
                </value>
                <value>
                    <fullName>Remediated on Account Level</fullName>
                </value>
                <value>
                    <fullName>Not Remediated</fullName>
                </value>
                <value>
                    <fullName>Included in Work Order</fullName>
                </value>
                <value>
                    <fullName>Included in previous Change Order</fullName>
                </value>
                <value>
                    <fullName>Customer Refusal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSMS_CES_Terms_Included_US_Only__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if CSMS/CES Terms Included or not.</description>            
        <label>CSMS/CES Terms Included? (US Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Order_Number__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field stores change order.</description>
        <label>Change Order Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_eSignature_Status__c</fullName>
        <description>CLM-MC-CLMCMA-18411 - formula field for check for eSignature</description>
        <formula>IF(AND(
OR($RecordType.DeveloperName == &quot;USBU&quot;,$RecordType.DeveloperName == &quot;MSA&quot;),
ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;),
NOT(ISBLANK(Docusign_Account_Id__c)),
NOT(ISBLANK(DocuSign_Envelope_Id__c)),
DocuSign_Envelope_Id__r.Status__c != &quot;Completed&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Cancelled&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Declined&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Voided&quot;),
HYPERLINK(&quot;/lightning/cmp/c__LXC_CLM_checkEsignatureStatus?c__recordId=&quot;+Id, 
IMAGE(&quot;/resource/CheckeSignatureStatusAP&quot;,&quot;Check eSignature Status&quot;), &quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check eSignature Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This field stores client address.</description>
        <label>Client Address</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Specific_Template_Location__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field stores client specific template location.</description>
        <label>Client-Specific Template Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - Link to contact record to identify internal signatory</description>
        <label>Company Signed By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 3) AND (2 OR 4)) OR ( NOT (2) AND NOT (4))</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status_Category__c</field>
                <operation>equals</operation>
                <value>Request, In Authoring, In Signatures</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employment_Status_FF__c</field>
                <operation>notEqual</operation>
                <value>T</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status_Category__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Signed_Date__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Date when internal signatory signed</description>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_Rating__c</fullName>
        <description>CLM-MC-CLMCMA-18477 - Picklist to store the complexity of an agreement</description>
        <label>Complexity Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conga_Agreement_Id__c</fullName>
        <description>CLM-MC-CLMCMA-18285: external id to store apts agreement id</description>
        <externalId>true</externalId>
        <label>Conga Agreement Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - This field is a lookup of IQVIA Agreement to Conga Agreement</description>
        <inlineHelpText>This is Conga Agreement</inlineHelpText>
        <label>Del - Conga Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Auto_Number__c</fullName>
        <description>CLMCMA-18311 - The system assigned unique agreement number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>{00000000}</displayFormat>
        <startingNumber>1000000</startingNumber>
        <label>Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This field is used to store Agreement end date.</description>            
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - The system assigned unique agreement number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>DEL - Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - The effective date of the agreement</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correct_E_Signature_Recipients__c</fullName>
        <description>CLM-MC-CLMCMA-18411 - formula field for correct for eSignature recipients</description>
        <formula>IF(
AND(
OR($RecordType.DeveloperName == &quot;USBU&quot;,$RecordType.DeveloperName == &quot;MSA&quot;), 
ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;),
NOT(ISBLANK(Docusign_Account_Id__c)),
NOT(ISBLANK(DocuSign_Envelope_Id__c)),
DocuSign_Envelope_Id__r.Status__c != &quot;Completed&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Cancelled&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Draft&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Declined&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Voided&quot;),
HYPERLINK(&quot;/lightning/cmp/c__LXC_CLM_CorrectESignature?c__recordId=&quot;+Id,
IMAGE(&quot;/resource/CorrecteSigantureDocumentAP&quot;,&quot;Correct E-Signature Document&quot;), &quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct E-Signature Recipients</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Terms_Included_US_Only__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if DEA Terms Included or not.</description>
        <label>DEA Terms Included? (US Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store detailed description of agreement</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-18407 - The Apttus - DocuSign envelope Id to which this agreement is associated to.</description>
        <inlineHelpText>The DocuSign envelope Id to which this agreement is associated to.</inlineHelpText>
        <label>DocuSign Envelope Id</label>
        <referenceTo>IQ_DocuSignEnvelope__c</referenceTo>
        <relationshipLabel>IQVIA Agreements</relationshipLabel>
        <relationshipName>IQVIA_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docusign_Account_Id__c</fullName>
        <description>CLM-MC-CLMCMA-18407 - The DocuSign App Name to which this agreement is associated to.</description>
        <formula>If($RecordType.DeveloperName == &apos;MSA&apos;, $Setup.CLM_Configuration__c.IQVIA_MSA_Account_Id__c,
If($RecordType.DeveloperName == &apos;USBU&apos;, $Setup.CLM_Configuration__c.IQVIA_SOW_Account_Id__c,$Setup.CLM_Configuration__c.Default_DocuSign_Account_Id__c))</formula>
        <inlineHelpText>The DocuSign App Name to which this agreement is associated to.</inlineHelpText>
        <label>Docusign App Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed_Date__c</fullName>
        <description>CLM-MC-CLMCMA-19503 - This field is used to store Date on which it was fully Executed.</description>
        <label>Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Markup_Expense_Mgmt_Fee__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store Expense Markup Percentage.</description>
        <label>Expense Markup (Expense Mgmt Fee) %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiration_Notice_Date__c</fullName>
        <description>CLM-MC-CLMCMA-20290- Date for Owner Expiration Notice</description>
        <formula>IF(NOT(ISBLANK(Contract_End_Date__c))  &amp;&amp;  TEXT(Expiration_Notice__c) != &apos;30 Days Before&apos; &amp;&amp;  TEXT(Expiration_Notice__c) != &apos;60 Days Before&apos;, (Contract_End_Date__c - VALUE(SUBSTITUTE(TEXT(Expiration_Notice__c), &apos; Days Before&apos;, &apos;&apos;))), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Notice__c</fullName>
        <description>CLM-MC-CLMCMA-20290 - To indicate the number of days prior to expiration date that a notification needs to be sent to the owner</description>
        <inlineHelpText>This indicate the number of days prior to agreement end date that a notification needs to be sent.</inlineHelpText>
        <label>Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days Before</fullName>
                </value>
                <value>
                    <fullName>30 Days Before</fullName>
                </value>
                <value>
                    <fullName>45 Days Before</fullName>
                </value>
                <value>
                    <fullName>60 Days Before</fullName>
                </value>
                <value>
                    <fullName>90 Days Before</fullName>
                    <default>true</default>
                    <label>90 Days Before</label>
                </value>
                <value>
                    <fullName>120 Days Before</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expire_Comment__c</fullName>
        <description>CLM-MC-CLMCMA-19942 - Field to store comments when agreement set to expired status.</description>
        <label>Expire Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <description>CLM-MC-CLMCMA-19942 - Field to store expired date of IQVIA Agreement.</description>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FF_Agreement_Number__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Identifies the agreement number, including the version number. Use this field to display on screens, reports, dashboards, search filters and columns, etc. The other agreement number fields are for internal use only.</description>
        <formula>Agreement_Number__c &amp; &quot;.&quot; &amp; TEXT(CEILING(Version_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This field used to store Legal Entity 1 Full Address</description>
        <formula>Legal_Entity_1__r.Full_Address__c</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_AP_Custom__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This formula field is used for template generation.</description>            
        <formula>IF(AND(AND(ISPICKVAL(Status_Category__c, &quot;Request&quot;),ISPICKVAL(Status__c, &quot;Assigned&quot;)), NOT(ISPICKVAL(Status__c, &quot;On Hold&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Cancelled Request&quot;))),
HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Conga_Agreement_Id__c &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;,
IMAGE(&quot;/resource/AgreementAPActionButton&quot;, &quot;Generate&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Conga__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This boolean field is used to check whether Conga Agreement is linked or not.</description>            
        <formula>NOT(ISBLANK(Conga_Agreement_Id__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Conga?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Helper__c</fullName>
        <label>Helper</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Other Agreement</fullName>
                </value>
                <value>
                    <fullName>Self-Service SOW</fullName>
                </value>
                <value>
                    <fullName>HEOR Use</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials Use</fullName>
                </value>
                <value>
                    <fullName>Commercial Analytics Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImportOfflineDocument_AP_Custom__c</fullName>
        <description>CLM-MC-CLMCMA-18144 - This formula field is used for import offline documenmt button.</description>            
        <formula>IF (AND(OR(ISPICKVAL(Status_Category__c, &quot;Request&quot;), ISPICKVAL(Status_Category__c, &quot;In Authoring&quot;))), 
IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), 
HYPERLINK(&quot;/apex/Apttus__LightningOfflineDocumentImport?id=&quot;&amp; Conga_Agreement_Id__c, IMAGE(&quot;/resource/AgreementButtonImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;), 
HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp; Conga_Agreement_Id__c, IMAGE(&quot;/resource/AgreementButtonImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Offline Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Instruction_Guidance__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if Instruction/Guidance Included or not.</description>
        <label>Include Instruction/Guidance?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indemnification_Included__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if Indemnification Included or not.</description>
        <label>Indemnification Included?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_Service_Plan_Included__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if Info Service Plan Included or not.</description>
        <label>Info Service Plan Included?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_New_Agreement__c</fullName>
        <description>CLM-MC-CLMCMA-18538 - This field is used to check if its a new agreement.</description>
        <formula>IF(Id != null, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportunity_Level_OA__c</fullName>
        <description>CLMCMA-19322: This field is used to identify Opportunity level Other Agreements</description>
        <formula>IF(RecordType.DeveloperName = &apos;USBU&apos;, IF( OR( ISPICKVAL( Subtype__c , &quot;Amendment&quot;) ,ISPICKVAL( Subtype__c , &quot;Change Order&quot;)) , IF( OR(ISPICKVAL( Original_Agreement__r.Subtype__c , &quot;Consultant Resell SOW&quot;),ISPICKVAL( Original_Agreement__r.Subtype__c , &quot;Evaluation and Limited License Agreement&quot;),ISPICKVAL( Original_Agreement__r.Subtype__c , &quot;Litigation SOW&quot;), ISPICKVAL( Original_Agreement__r.Subtype__c , &quot;SOW&quot;)) ,true,false), IF( OR(ISPICKVAL( Subtype__c , &quot;Consultant Resell SOW&quot;),ISPICKVAL( Subtype__c , &quot;Evaluation and Limited License Agreement&quot;),ISPICKVAL( Subtype__c , &quot;Litigation SOW&quot;),ISPICKVAL( Subtype__c , &quot;SOW&quot;)) ,true,false)),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opportunity Level OA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Other_Agreement__c</fullName>
        <description>CLM-MC-CLMCMA-18418 - This field is used identify that created agreement is Other Agreement or not.</description>
        <formula>IF(Record_Type_Developer_Name__c = &apos;USBU&apos;,
IF(OR(AND(Version_Number__c &gt; 0, ISPICKVAL(Original_Agreement__r.Subtype__c,&apos;SOW&apos;)), AND(Version_Number__c == 0, ISPICKVAL(Subtype__c,&apos;SOW&apos;))), false, true), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Other Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Manual_Sharing_Execution__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This field is used to store Last Manual Sharing Execution.</description>
        <label>Last Manual Sharing Execution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sharing_Calculation_Timestamp__c</fullName>
        <description>CLM-MC-CLMCMA-17693 - This field is used to store Last Sharing Calculation Timestamp</description>
        <label>Last Sharing Calculation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late_Payment_Fee__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store Late Payment Fee percentage.</description>
        <label>Late Payment Fee %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Late_Payment_Terms_Included__c</fullName>
        <description>CLM-MC-CLMCMA-19426 - This field is used to store Late Payment Terms Included?</description>            
        <label>Late Payment Terms Included?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>